--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html> <head> <title>Lava.js | Made JS easier </title>
 </head>
-<body> <h1> WIP </h> </body> </html>
+<body> <h1> WIP </h>
+<h2> Lava.js, makes javascript easier. </h>
+Simply, lava.js re-syntax your codes and help you understand Javascript better
+<a href="github.com"> wip link</a> </body> </html>
